[package]
name = "early"
version = "0.1.0"
description = "utility for generating families of URLs"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Peter Allin <peter@peca.dk>"]
repository = "https://github.com/peterallin/early"
readme = "README.md"

[dependencies]
itertools="0.10"
urlencoding="2.1"